--- a/controller.ipynb
+++ b/controller.ipynb
@@ -41,7 +41,7 @@
     {
      "data": {
       "text/plain": [
-       "'/root/autodl-tmp/bert.cpp'"
+       "'d:\\\\Code\\\\bert.cpp'"
       ]
      },
      "execution_count": 1,
@@ -51,8 +51,8 @@
    ],
    "source": [
     "import os\n",
-    "# os.environ[\"http_proxy\"] = \"http://127.0.0.1:7891\"\n",
-    "# os.environ[\"https_proxy\"] = \"http://127.0.0.1:7891\"\n",
+    "os.environ[\"http_proxy\"] = \"http://127.0.0.1:7891\"\n",
+    "os.environ[\"https_proxy\"] = \"http://127.0.0.1:7891\"\n",
     "os.getcwd()"
    ]
   },
@@ -94,8 +94,9 @@
    "source": [
     "# !pip install -r requirements.txt\n",
     "# python3 models/download-ggml.py list_models\n",
-    "!python models/download-ggml.py download all-MiniLM-L6-v2 q4_0\n",
-    "!python models/download-ggml.py download all-MiniLM-L6-v2 f16"
+    "!git clone https://huggingface.co/sentence-transformers/multi-qa-MiniLM-L6-cos-v1\n",
+    "# !python models/download-ggml.py download all-MiniLM-L6-v2 q4_0\n",
+    "# !python models/download-ggml.py download all-MiniLM-L6-v2 f16"
    ]
   },
   {
@@ -188,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
